# vcard

./: .gitignore  App.tsx  LICENSE  README.md  ROADMAP.md  debug_regex.js  ilib-address.d.ts  index.html  index.tsx  manifest.json  package-lock.json  package.json  playwright.config.ts  smartcrop.d.ts  tailwind.config.js  test_output.txt  test_output_2.txt  test_output_3.txt  test_output_4.txt  test_output_5.txt  test_output_6.txt  test_output_7.txt  test_output_8.txt  test_output_9.txt  test_output_addr_fix11.txt  test_output_addr_fix12.txt  test_output_addr_fix13.txt  test_output_addr_fix14.txt  test_output_addr_fix15.txt  test_output_addr_fix16.txt  test_output_addr_fix2.txt  test_output_addr_fix3.txt  test_output_addr_fix4.txt  test_output_addr_fix5.txt  test_output_addr_fix6.txt  test_output_addr_fix7.txt  test_output_addr_fix8.txt  test_output_addr_fix9.txt  test_output_debug_addr.txt  test_output_final.txt  (+12 more)
auth/: GoogleContactsContext.tsx  useGoogleContactsAuth.ts
components/: BatchUploadModal.tsx  BatchUploadSidebar.tsx  CameraCaptureModal.tsx  ChatModal.tsx  ChatSidebar.tsx  DuplicateFinderModal.tsx  Editor.tsx  ErrorBoundary.tsx  EventModeModal.tsx  FailedScansModal.tsx  FailedScansSidebar.tsx  Logo.tsx  (+28 more)
src-rust/: Cargo.toml
src-rust/src/: dedup.rs  image_ops.rs  lib.rs  pdf.rs  search.rs
src-rust/src/parser/: address.rs  db.rs  email.rs  landline.rs  layout.rs  mod.rs  name.rs  name_parts.rs  org.rs  phone.rs  primitives.rs  social.rs  street_tokens.rs  streets.rs  title.rs  types.rs  url.rs
src-rust/tests/: debug_ekta.rs  debug_url.rs  user_test.rs
(+98 files in other folders)
