[package]
name = "core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = ["console"] }
js-sys = "0.3"

# PDF & Image Dependencies (Pre-emptive)
lopdf = "0.31"
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }
imageproc = "0.23"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

